# data-engineering-rust-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  start_containers.sh
rust-aws-demo/: Cargo.toml  README.md
rust-aws-demo/src/: main.rs
rusty-simple-delta/: Cargo.toml  read.py  requirements.txt
rusty-simple-delta/src/: main.rs
spark-python/: get-jars.sh  jars.txt  start-spark.sh  submit_to_container.sh
spark-python/apps/: read_delta.py  submit_job.sh
spark-python/apps/config/: config.py  config.yaml
